--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "ethers": "^6.13.5",
     "framer-motion": "^7.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
