--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "ethers": "^6.13.5",
+    "file-saver": "^2.0.5",
     "framer-motion": "^7.6.12",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "solc-js": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
