--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^7.6.12",
     "jszip": "^3.10.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "solc-js": "^1.0.1"
