--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ajv-keywords": "^3.5.2",
     "ethers": "^6.13.5",
     "file-saver": "^2.0.5",
+    "firebase": "^11.6.0",
     "framer-motion": "^7.6.12",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "jszip": "^3.10.1",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
