--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "solc-js": "^1.0.1"
   },
   "devDependencies": {
+    "@types/node": "18.18.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2"
